--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
 
 
     <div class="home " id="home">
-
         <div class="banner container">
             <div class="index d-flex flex-column justify-content-center align-items-center text-center">
                 <h5 class="h5text">Historical Monuments Of India</h5>
@@ -71,6 +70,8 @@
                         state in India.The caves include paintings and rock-cut sculptures described as
                         among the finest surviving examples of ancient Indian art, particularly expressive paintings
                         that present emotions through gesture, pose and form.</p>
+
+                        <a  href="https://en.wikipedia.org/wiki/Ajanta_Caves" target="_blank" class="btn btn-outline-warning ">View More</a>
                 </div>
             </div>
         </div>
@@ -84,9 +85,8 @@
                         officially incorporated in the emblem of Telangana[3] The Charminar's long history includes the
                         existence of a mosque on its top floor for more than 425 years. While both historically and
                         religiously significant, it is also known for its popular and busy local markets surrounding the
-                        structure, and has become one of the most frequented tourist attractions in Hyderabad. Charminar
-                        is also a site of numerous festival celebrations, such as Eid-ul-adha and Eid al-Fitr, as it
-                        is adjacent to the city's main mosque, the Makkah Masjid.</p>
+                        structure, and has become one of the most frequented tourist attractions in Hyderabad.</p>
+                        <a  href="https://en.wikipedia.org/wiki/Charminar" target="_blank" class="btn btn-outline-warning ">View More</a>
                 </div>
             </div>
         </div>
@@ -101,9 +101,9 @@
                         Wellington Fountain.The foundation stone was laid in March 1913 for a monument built in the
                         Indo-Islamic style,
                         inspired by elements of 16th-century Gujarati architecture. The final design of the monument by
-                        architect George Wittet was sanctioned only in 1914, and construction was completed in 1924. The
-                        structure is a memorial arch made of basalt, which is 26 metres (85 feet) high, with an
-                        architectural resemblance to a triumphial arch as well as Gujarati architecture of the time.</p>
+                        architect George Wittet was sanctioned only in 1914, and construction was completed in 1924.
+                    </p>
+                    <a  href="https://en.wikipedia.org/wiki/Gateway_of_India#:~:text=The%20Gateway%20of%20India%20is,Strand%20Road%20near%20Wellington%20Fountain." target="_blank" class="btn btn-outline-warning ">View More</a>
                 </div>
             </div>
         </div>
@@ -118,6 +118,7 @@
                         activity, in what was originally an uninhabited land.Thus, it is a feasible contention to
                         say that the city (formerly named Madras) evolved around the fortress.The fort currently
                         houses the Tamil Nadu legislative assembly and other official buildings.</p>
+                        <a  href="https://en.wikipedia.org/wiki/Fort_St._George,_India" target="_blank" class="btn btn-outline-warning ">View More</a>
                 </div>
             </div>
         </div>
@@ -129,10 +130,10 @@
                     <p class="description">The Golden Temple is spiritually the most significant shrine in Sikhism. It
                         became a centre of the Singh Sabha Movement between 1883 and 1920s, and the Punjabi Suba
                         movement between 1947 and 1966. In the early 1980s, the Gurdwara became a centre of conflict
-                        between the Indian government and a movement led by Jarnail Singh Bhindranwale.[13] In 1984,
+                        between the Indian government and a movement led by Jarnail Singh Bhindranwale.In 1984,
                         Prime Minister Indira Gandhi sent in the Indian Army as part of Operation Blue Star, leading to
-                        deaths of over 1,000 soldiers and civilians, as well as causing much damage to the Gurdwara and
-                        the destruction of Akal Takht. The Gurdwara complex was rebuilt again after the 1984 damage.</p>
+                        deaths of over 1,000 soldiers and civilians.</p>
+                        <a  href="https://en.wikipedia.org/wiki/Golden_Temple" target="_blank" class="btn btn-outline-warning ">View More</a>
                 </div>
             </div>
         </div>
@@ -147,26 +148,23 @@
                         in the mid-17th century, the structure never reached completion. The mausoleum is notable for
                         its scale and exceptionally large dome.
                         It is an important example of the southern regional style of Indo-Islamic architecture.
-                        The building is one of those put by UNESCO on its "tentative list" to become a World Heritage
-                        Site in 2014, under the name Monuments and Forts of the Deccan Sultanate.</p>
+                    </p>
+                    <a  href="https://en.wikipedia.org/wiki/Gol_Gumbaz" target="_blank" class="btn btn-outline-warning ">View More</a>
                 </div>
             </div>
         </div>
         <div class="imageGallery container py-2">
             <div class="image "> <img src="images/GudubMinor.jpg" alt="GudubMinor">
                 <div class="label">
-                    <h3>#7.Gudub Minor</h3>
+                    <h3>#7.Qtub Minor</h3>
                     <h6 class="text-warning">Mehrauli,Delhi.</h6>
                     <p class="description">The Qutb Minar, also spelled Qutub Minar and Qutab Minar, is a minaret and
                         "victory tower" that forms part of the Qutb complex, which lies at the site of Delhi’s oldest
                         fortified city, Lal Kot, founded by the Tomar Rajputs.[3] It is a UNESCO World Heritage Site in
                         the Mehrauli area of South Delhi, India.It is one of the most visited tourist spots in
                         the city, mostly built between 1199 and 1220.
-                        It can be compared to the 62-metre all-brick Minaret of Jam in Afghanistan, of c. 1190, which
-                        was constructed a decade or so before the probable start of the Delhi tower.[8] The surfaces of
-                        both are elaborately decorated with inscriptions and geometric patterns. The Qutb Minar has a
-                        shaft that is fluted with "superb stalactite bracketing under the balconies" at the top of each
-                        stage.</p>
+                    </p>
+                    <a  href="https://en.wikipedia.org/wiki/Qutb_Minar" target="_blank" class="btn btn-outline-warning ">View More</a>
                 </div>
             </div>
         </div>
@@ -179,6 +177,7 @@
                         be used by Mughal Emperor Jehangir as a hunting lodge. Its surrounding gardens were decorated
                         with water bodies and causeways. Eventually, the structure fell under the care of the Church
                         Missionary Society, and was later taken over by the Department of Archaeology.</p>
+                        <a  href="https://housing.com/news/kanch-mahal-sikandra-agra/" target="_blank" class="btn btn-outline-warning ">View More</a>
                 </div>
             </div>
         </div>
@@ -193,9 +192,8 @@
                         Indian Army who died between 1914 and 1921 in the First World War, in France, Flanders,
                         Mesopotamia, Persia, East Africa, Gallipoli and elsewhere in the Near and the Far East, and the
                         Third Anglo-Afghan War. 13,300 servicemen's names, including some soldiers and officers from the
-                        United Kingdom, are inscribed on the gate. Designed by Sir Edwin Lutyens, the gate evokes the
-                        architectural style of the memorial arch such as the Arch of Constantine, in Rome, and is often
-                        compared to the Arc de Triomphe in Paris, and the Gateway of India in Mumbai.</p>
+                        United Kingdom, are inscribed on the gate. </p>
+                        <a  href="https://en.wikipedia.org/wiki/India_Gate#:~:text=The%20India%20Gate%20(formerly%20known,Delhi%2C%20formerly%20called%20duty%20path." target="_blank" class="btn btn-outline-warning ">View More</a>
                 </div>
             </div>
         </div>
@@ -209,8 +207,8 @@
                         women's chambers.
 
                         The structure was built in 1799 by the Maharaja Sawai Pratap Singh, grandson of Maharaja Sawai
-                        Jai Singh, the founder of the city of Jaipur, India.He was so inspired by the unique
-                        structure of Khetri Mahal that he built this grand and historical palace.</p>
+                        Jai Singh, the founder of the city of Jaipur, India.</p>
+                        <a  href="https://en.wikipedia.org/wiki/Hawa_Mahal" target="_blank" class="btn btn-outline-warning ">View More</a>
                 </div>
             </div>
         </div>
@@ -224,9 +222,8 @@
                         India. The temple is attributed to king Narasimhadeva I of the Eastern Ganga dynasty about
                         1250 CE.
                         Dedicated to the Hindu Sun God Surya, what remains of the temple complex has the appearance of a
-                        100-foot (30 m) high chariot with immense wheels and horses, all carved from stone. Once over
-                        200 feet (61 m) high, much of the temple is now in ruins, in particular the large shikara
-                        tower over the sanctuary; at one time this rose much higher than the mandapa that remains.</p>
+                        100-foot (30 m) high chariot with immense wheels and horses, all carved from stone.</p>
+                        <a  href="https://en.wikipedia.org/wiki/Konark_Sun_Temple" target="_blank" class="btn btn-outline-warning ">View More</a>
                 </div>
             </div>
         </div>
@@ -241,8 +238,8 @@
                         regardless of religion or any other qualification. The building is composed of 27 free-standing
                         marble-clad "petals" arranged in clusters of three to form nine sides, with nine doors
                         opening onto a central hall with a height of slightly over 34 meters and a capacity of 1,300
-                        people.The Lotus Temple has won numerous architectural awards and has been featured in
-                        many newspaper and magazine articles</p>
+                        people.</p>
+                        <a  href="https://en.wikipedia.org/wiki/Lotus_Temple" target="_blank" class="btn btn-outline-warning ">View More</a>
                 </div>
             </div>
         </div>
@@ -256,10 +253,8 @@
                         India and is a UNESCO World Heritage Site.It is on the Coromandel Coast of the Bay of
                         Bengal, about 60 kilometres (37 mi) south of Chennai.
                         The site has 40 ancient monuments and Hindu temples, including one of the largest open-air
-                        rock reliefs in the world: the Descent of the Ganges or Arjuna's Penance. ratha temples with
-                        monolithic processional chariots,
-                        built between 630 and 668;stone-cut temples built between 695 and 722,
-                        and archaeological excavations dated to the 6th century and earlier</p>
+                        rock reliefs in the world: the Descent of the Ganges or Arjuna's Penance.</p>
+                        <a  href="https://en.wikipedia.org/wiki/Group_of_Monuments_at_Mahabalipuram" target="_blank" class="btn btn-outline-warning ">View More</a>
                 </div>
             </div>
         </div>
@@ -274,6 +269,7 @@
                         range of the Himalayas.They are a version of North Indian Nagara architecture style,
                         dedicated to Shiva, Vishnu, Devi and Saura traditions of Hinduism, with its surviving
                         iconography likely inspired by a henotheistic framework.</p>
+                        <a  href="https://en.wikipedia.org/wiki/Masrur_Temples" target="_blank" class="btn btn-outline-warning ">View More</a>
                 </div>
             </div>
         </div>
@@ -288,6 +284,7 @@
                         centre of Mysore, and faces the Chamundi Hills eastward. Mysore is commonly described as the
                         'City of Palaces', and there are seven palaces including this one. However, the Mysore Palace
                         refers specifically to the one within the new fort.</p>
+                        <a  href="https://en.wikipedia.org/wiki/Mysore_Palace" target="_blank" class="btn btn-outline-warning ">View More</a>
                 </div>
             </div>
         </div>
@@ -300,6 +297,7 @@
                         confines of the Fort campus of the University of Mumbai. It stands at a height of 85 m (280 ft
                         or 25 storeys). The tower is part of The Victorian and Art Deco Ensemble of Mumbai, which was
                         added to the list of World Heritage Sites in 2018.</p>
+                        <a  href="https://en.wikipedia.org/wiki/Rajabai_Clock_Tower" target="_blank" class="btn btn-outline-warning ">View More</a>
                 </div>
             </div>
         </div>
@@ -315,6 +313,7 @@
                         Ahmad Lahori, who also constructed the Taj Mahal. The fort represents the peak in Mughal
                         architecture under Shah Jahan and combines Persianate palace architecture with Indian
                         traditions.</p>
+                        <a  href="https://en.wikipedia.org/wiki/Red_Fort" target="_blank" class="btn btn-outline-warning ">View More</a>
                 </div>
             </div>
         </div>
@@ -327,6 +326,7 @@
                         an important monument of Indian Architecture. It was originally commissioned by the Mauryan
                         emperor Ashoka the Great in the 3rd century BCE. Its nucleus was a simple hemispherical brick
                         structure built over the relics of the Buddha.</p>
+                        <a  href="https://en.wikipedia.org/wiki/Sanchi" target="_blank" class="btn btn-outline-warning ">View More</a>
                 </div>
             </div>
         </div>
@@ -342,6 +342,7 @@
                         himself. The tomb is the centrepiece of a 17-hectare (42-acre) complex, which includes a mosque
                         and a guest house, and is set in formal gardens bounded on three sides by a crenellated wall.
                     </p>
+                    <a  href="https://en.wikipedia.org/wiki/Taj_Mahal" target="_blank" class="btn btn-outline-warning ">View More</a>
                 </div>
             </div>
         </div>
@@ -355,10 +356,8 @@
                         Peruvudaiyar Kovil, is a Shaivite[3][4] Hindu temple built in a Chola architectural style
                         located on the south bank of the Cauvery river in Thanjavur, Tamil Nadu, India.It is one
                         of the largest Hindu temples and an exemplar of Tamil architecture.It is also called
-                        Dakshina Meru ("Meru of the South).[8] Built by Chola emperor Rajaraja I between 1003 and 1010
-                        CE, the temple is a part of the UNESCO World Heritage Site known as the "Great Living Chola
-                        Temples", along with the hola-era Gangaikonda Cholapuram temple and Airavatesvara temple, which
-                        are about 70 kilometres (43 mi) and 40 kilometres (25 mi) to its northeast respectively</p>
+                        Dakshina Meru ("Meru of the South).</p>
+                        <a  href="https://en.wikipedia.org/wiki/Brihadisvara_Temple,_Thanjavur#:~:text='Lord%20of%20Rajaraja')%20by,Thanjavur%2C%20Tamil%20Nadu%2C%20India." target="_blank" class="btn btn-outline-warning ">View More</a>
                 </div>
             </div>
         </div>
@@ -372,8 +371,8 @@
                         about 500 meters off mainland of Vavathurai. It was built in 1970 in honour of Swami
                         Vivekananda, who is said to have attained enlightenment on the rock. According to
                         legends, it was on this rock that Goddess Kanyakumari (Parvathi) performed tapas in devotion of
-                        lord Shiva. A meditation hall known as Dhyana Mandapam is also attached to the memorial for
-                        visitors to meditate</p>
+                        lord Shiva.</p>
+                        <a  href="https://en.wikipedia.org/wiki/Vivekananda_Rock_Memorial" target="_blank" class="btn btn-outline-warning ">View More</a>
                 </div>
             </div>
         </div>
